admin/manifests/webservers/deploy_web1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web1
    app.kubernetes.io/component: web1
    app.kubernetes.io/instance: web1
  name: web1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: web1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: web1
    spec:
      containers:
      - image: quay.io/rdacosta/my_httpd
        imagePullPolicy: IfNotPresent
        name: web1
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
