admin/manifests/webservers/route_web1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web1
    app.kubernetes.io/component: web1
    app.kubernetes.io/instance: web1
    app.kubernetes.io/name: web1
    app.kubernetes.io/part-of: my-app
    app.openshift.io/runtime-version: latest
  name: web1
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: web1
    weight: 100
  wildcardPolicy: None
